--- a/style.css
+++ b/style.css
@@ -142,3 +142,102 @@ a:hover {
     font-size: 22px;
   }
 }
+
+@media screen and (max-width: 768px) {
+
+    img.main_img {
+      float: none;
+      width: 100%;
+    }
+  
+    #nav {
+      height: 0;
+      margin-top: 0;
+    }
+  
+    .menu {
+      visibility: hidden;
+      left: -9999px;
+      position: absolute;  
+      top: 0;
+      width: 300px;
+      margin: 0;
+      padding: 80px 0;
+      background-color: #fff;
+      box-shadow: 1px 0px 6px rgba(0, 0, 0, 0.2);
+    }
+  
+    ul.menu li a {
+      float: none;
+      background: #fff;
+      color: rgb(165, 7, 157);
+    }
+  
+    ul.menu li a:hover {
+      background: rgb(253, 178, 237);
+    }
+  
+    .menu_btn {
+      text-align: center;
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      width: 26px;
+      height: 26px;
+      cursor: pointer;
+      z-index: 1;
+    }
+  
+    .menu_btn > span,
+    .menu_btn > span::before,
+    .menu_btn > span::after {
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background-color: #616161;
+    }
+  
+    .menu_btn > span::before {
+      content: "";
+      top: -8px;
+    }
+  
+    .menu_btn > span::after {
+      content: "";
+      top: 8px;
+    }
+  
+    #menu_toggle:checked ~ .menu {
+      display: block;
+      visibility: visible;
+      left: 0;
+    }
+  
+    #menu_toggle:checked ~ .menu_btn > span {
+      transform: rotate(45deg);
+    }
+  
+    #menu_toggle:checked ~ .menu_btn > span::before {
+      top: 0;
+      transform: rotate(0);
+    }
+  
+    #menu_toggle:checked ~ .menu_btn > span::after {
+      top: 0;
+      transform: rotate(90deg);
+    }
+  
+    .menu_btn > span,
+    .menu_btn > span::before,
+    .menu_btn > span::after {
+      transition-duration: 0.25s;
+    }
+    .menu {
+      transition-duration: 0.25s;
+    }
+    .menu_item {
+      transition-duration: 0.25s;
+    }
+  }
+  
